--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
     <div class="publicacion">
         <header class="header-publicacion">
@@ -24,12 +33,16 @@
             <i class="fa-regular fa-bookmark icono-guardar"></i>
         </section>
         <section class="quienes-dieron-like">
-            <p class="parrafo-like">Liked by <span>4GeeksAcademy</span>, <span>html5</span>, <span>Web</span> and <span>100,000 others</span> </p>
+            <p class="parrafo-like">Liked by <span>4GeeksAcademy</span>, <span>html5</span>, <span>Web</span> and
+                <span>100,000 others</span> </p>
         </section>
         <section class="descripcion-post">
-            <p class="parrafo-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, temporibus tenetur libero officiis, neque et fugit blanditiis exercitationem assumenda at provident est beatae error hic dolorum cumque nesciunt quibusdam reiciendis!</p>
+            <p class="parrafo-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, temporibus
+                tenetur libero officiis, neque et fugit blanditiis exercitationem assumenda at provident est beatae
+                error hic dolorum cumque nesciunt quibusdam reiciendis!</p>
         </section>
     </div>
-    
+
 </body>
+
 </html>
