--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 <body>
     <div class="publicacion">
         <header class="header-publicacion">
-            <img src="assets/imagenes/profile.jpg" class="profile-ig" alt="">
-            <span class="username">casper_amo</span>
-            <i class="fas fa-ellipsis-v icono-opciones"></i>
+            <div class="to-izquierda">
+                <div class="contenedor-profile-ig"> 
+                <img src="assets/imagenes/profile.jpg" class="profile-ig" alt="">
+                </div>
+                <span class="username">casper_amo</span>
+            </div>
+            <div class="to-derecha">
+                <i class="fas fa-ellipsis-v icono-opciones"></i>
+            </div>
         </header>
         <section class="contenedor-foto">
             <img src="assets/imagenes/fotopost.jpg" class="foto-post" alt="">
@@ -42,7 +48,5 @@
                 error hic dolorum cumque nesciunt quibusdam reiciendis!</p>
         </section>
     </div>
-
 </body>
-
 </html>
