--- a/index.html
+++ b/index.html
@@ -32,21 +32,29 @@
         <section class="contenedor-foto">
             <img src="assets/imagenes/fotopost.jpg" class="foto-post" alt="">
         </section>
-        <section class="contenedor-iconos">
-            <i class="fa-regular fa-heart icono-corazon"></i>
-            <i class="fa-regular fa-comment icono-comentar"></i>
-            <i class="fa-regular fa-paper-plane icono-compartir"></i>
-            <i class="fa-regular fa-bookmark icono-guardar"></i>
+        <section class="footer-post">
+            <section class="contenedor-iconos">
+                <div class="to-izquierda">
+                    <i class="fa-regular fa-heart icono-corazon"></i>
+                    <i class="fa-regular fa-comment icono-comentar"></i>
+                    <i class="fa-regular fa-paper-plane icono-compartir"></i>
+                </div>
+                <div class="to-derecha">
+                    <i class="fa-regular fa-bookmark icono-guardar"></i>
+                </div>
+                
+            </section>
+            <section class="quienes-dieron-like">
+                <p class="parrafo-like">Liked by <span>4GeeksAcademy</span>, <span>html5</span>, <span>Web</span> and
+                    <span>100,000 others</span> </p>
+            </section>
+            <section class="descripcion-post">
+                <p class="parrafo-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, temporibus
+                    tenetur libero officiis, neque et fugit blanditiis exercitationem assumenda at provident est beatae
+                    error hic dolorum cumque nesciunt quibusdam reiciendis!</p>
+            </section>
         </section>
-        <section class="quienes-dieron-like">
-            <p class="parrafo-like">Liked by <span>4GeeksAcademy</span>, <span>html5</span>, <span>Web</span> and
-                <span>100,000 others</span> </p>
-        </section>
-        <section class="descripcion-post">
-            <p class="parrafo-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, temporibus
-                tenetur libero officiis, neque et fugit blanditiis exercitationem assumenda at provident est beatae
-                error hic dolorum cumque nesciunt quibusdam reiciendis!</p>
-        </section>
+        
     </div>
 </body>
 </html>
